# XenEngine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
Docs/ScriptingAPI/: README.md
Docs/XENEngineAPI/: README.md
Docs/XEditor/: README.md
Docs/XPak/: README.md
Examples/: SimpleGame.cpp
Examples/PicklePuncher/: CMakeLists.txt  PicklePuncher.cpp  PicklePuncher.xproj  app.manifest
Examples/PicklePuncher/Content/: PicklePuncher.manifest
Examples/PicklePuncher/Scenes/: Main.xscene
Examples/PicklePuncher/Scripts/: CameraController.lua  Player.xscript
Examples/PicklePuncher/Source/: PicklePuncher.cpp
Examples/Pong/: CMakeLists.txt  Pong.xproj  README.md
Examples/Pong/Content/: Assets.xml  Pong.manifest  Scenes.xml  Scripts.xml
Examples/Pong/Content/Scenes/: Main.scene
Examples/Pong/Content/Scripts/: Ball.lua  MainCamera.lua  Player.lua
Examples/Pong/Content/audio/: bg_music.xmdf
Examples/Pong/Content/sprites/: ball.xmdf  paddle.xmdf  paddle.xpkf
Examples/Pong/Scenes/: Main.xscene
Examples/Pong/Scripts/: Ball.lua  MainCamera.lua  Opponent.lua  Player.lua
Examples/Pong/Source/: Pong.cpp
Include/XenEngine/: Buffer.hpp  Camera.hpp  Clock.hpp  CommonShaders.hpp  Component.hpp  ContentManager.hpp  Game.hpp  GameObject.hpp  Graphics.hpp  Input.hpp  InputCodes.hpp  Platform.h  Primitives.hpp  Scene.hpp  SceneManager.hpp  ScriptEngine.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp  XenEngine.h  XenEngine.hpp
Scripts/: CopyExampleContent.py
Shared/: Compression.hpp  Expect.hpp  IO.hpp  Panic.hpp  Types.hpp
Source/: Camera.cpp  Clock.cpp  ContentManager.cpp  Game.cpp  GameObject.cpp  Input.cpp  Scene.cpp  ScriptEngine.cpp  Shader.cpp  XenEngine.cpp
Tools/XBuild/: CMakeLists.txt  README.md
Tools/XBuild/Source/: main.cpp
Tools/XEditor/: CMakeLists.txt  README.md
Tools/XEditor/Source/: EditorLog.cpp  EditorLog.h  EditorPreferences.cpp  EditorPreferences.hpp  EditorStyle.cpp  EditorStyle.hpp  EditorUI.cpp  EditorUI.hpp  EditorWindow.cpp  EditorWindow.hpp  main.cpp
Tools/XEditor/Themes/: Moonlight.xml  XenDark.xml
Tools/XPak/: CMakeLists.txt  README.md
Tools/XPak/Source/: Asset.hpp  AssetManifest.hpp  BuildCache.hpp  Compression.h  Compression.inl  Manifest.hpp  MetadataFile.hpp  PakFile.hpp  Processors.inl  Project.hpp  SceneManifest.hpp  ScriptManifest.hpp  TableEntry.hpp  main.cpp
Tools/XnPak/: CMakeLists.txt  Manifest.cs  Program.cs  Utilities.cs  XnPak.cpp  XnPak.csproj  XnPak.h  XnPak.hpp  XnPak.sln  main.cpp
Tools/XnPak/Example/: Content.manifest
Tools/XnPak/Importers/: AudioImporter.cs  FontImporter.cs  TextureImporter.cs
Tools/XnPak/Properties/: AssemblyInfo.cs
Tools/XnPak/Test/: Content.manifest
Tools/XnPak/Test/Content/sprites/: blink.pak  idle.pak  punched.pak
Tools/XnPakEditor/: App.xaml  App.xaml.cs  MainWindow.Designer.cs  MainWindow.cs  MainWindow.resx  MainWindow.xaml  MainWindow.xaml.cs  Program.cs  XnPakEditor.csproj  XnPakEditor.sln  pom.xml
Tools/XnPakEditor/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Tools/XnPakEditor/src/main/java/: module-info.java
Tools/XnPakEditor/src/main/java/org/jakerieger/xnpakeditor/: EditorState.java  XnPakEditorApp.java  XnPakEditorController.java
Tools/XnPakEditor/src/main/java/xen/xnpak/: Asset.java  AssetProcessors.java  AssetType.java  CLI.java  Manifest.java  NotBlank.java
Tools/XnPakEditor/src/main/java/xen/xnpakeditor/: EditorApp.java  EditorController.java  EditorLauncher.java  EditorState.java  TextAreaOutputStream.java
Tools/XnPakEditor/src/main/resources/org/jakerieger/xnpakeditor/: editor-view.fxml
Tools/XnPakEditor/src/main/resources/xen/xnpakeditor/: cupertino-dark.css  editor-style.css  editor-view.fxml
